<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flash me</string>
    <string name="app_description">A virtual reality mobile game.</string>
    <string name="action_settings">Settings</string>
    <string name="empty_string"></string>
    
    
    <!-- connect -->
    <string name="bobble_help">help</string>
    <string name="flash_me">FLASH ME</string>
    <string name="logo">logo</string>
    <string name="if_you_can">if you can !</string>
    <string name="username">Username</string>  
	<string name="password">Password</string>
	<string name="login">LOG IN</string>
	<string name="or">or</string>
	<string name="signup">SIGN UP</string>
	<string name="popup_title">FLASH ME \n if you can !</string>
	<string name="popup_description">is an augmented reality mobile application created by Xochitl Florimont, Flora Jullien and Elisa Prana, three students of the IMAC engineering school located in Paris.</string>
	<string name="close_popup">close_popup</string>

	<!-- activities -->
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_content">Flash me</string>
    <string name="title_activity_game">Flash me</string>
    <string name="title_activity_players">Flash me</string>
    <string name="title_activity_teams">Flash me</string>
    <string name="title_edit_activity">Edit profile</string>
    <string name="title_profile_activity">Flash me</string>
	
	<!-- sign up & log in -->
    <string name="mail">E-mail</string>
    <string name="login_or_pass_empty">Ooops ! You must complete all the entries.</string>
    <string name="login_too_short">Ooops ! You must choose a username larger than 3 characters.</string>
    <string name="password_too_short">Ooops ! You must choose a password larger than 3 characters.</string>
    <string name="no_internet_access">Ooops ! You need to have an internet access to log in.</string>    
    <string name="wrong_username_or_pass">Seems like you haven\'t created an account yet.</string>
    <string name="wrong_mail_pattern">Ooops! Invalid e-mail.</string>
    <string name="back_bt">back</string>
    <string name="refresh_bt">back</string>
    <string name="settings_bt">settings</string>
	<string name="create_account">Create your account</string>
	<string name="pic_empty">empty_picture</string>
	<string name="choose_pic">CHOOSE PICTURE</string>
	<string name="take_pic">TAKE PICTURE</string>
	<string name="account_created">Your account has been successfully created ! Your marker will be sent to your mail address in a few minutes. Meanwhile, you can discover and edit your profile. Enjoy !</string>
	<string name="email_to_send">Welcome to <font color="#A4A4A4"><b>Flash Me (if you can!)</b></font> ! \n\n<br/><br />
	    										Here are your username and password required to access the application : \n<br />
	    										<b>Username :</b> %1$s \n<br />
	    										<b>Password :</b> %2$s \n\n<br /><br />
	    										You can download your <b>marker</b> from this address : %3$s. \n\n<br />
	    										Here is a list of all the markers you can use to spice up your games! \n<br />
	    										<b>Poison</b> :  %4$s \n<br />
	    										<b>Points</b> :  %5$s \n<br />
	    										<b>Munitions</b> :  %6$s \n<br />
	    										<b>Scourge</b> :  %7$s \n<br />
	    										<b>Chain-saw</b> :  %8$s \n<br />
	    										<b>Gun</b> :  %9$s \n\n<br />
	    										
	    										Enjoy your game! \n\n<br /><br />
	    										The Flash Me Team\n</string>
	<string name="error_mail">We were not able to send the marker to your address, it seems to be wrong. Please enter a new e-mail address in the "Edit Profile" section.</string>
	<string name="error_mail_friend">We were not able to send the marker to your friend, this address may be wrong or the server is crowded. Please try again later.</string>
	<string name="marker_to_resend">Hello again!\n\n<br/><br />
	    							You can download again your marker from this address : %1$s.\n\n<br />
									Here is a list of all the markers you can use to spice up your games! \n<br />
									<b>Poison</b> :  %2$s \n<br />
									<b>Points</b> :  %3$s \n<br />
									<b>Munitions</b> :  %4$s \n<br />
									<b>Scourge</b> :  %5$s \n<br />
									<b>Chain-saw</b> :  %6$s \n<br />
									<b>Gun</b> :  %7$s \n\n<br />
	    										
	    							Enjoy your game! \n\n<br /><br />
	    							The Flash Me Team\n</string>
	    							
	<string name="send_mail_friend">Hello !\n\n<br/><br />
	    							Your friend %1$s (%2$s) has invited you to join Flash Me ! \n\n<br />
	    							Flash Me (If you can!) is the newest augmented reality mobile application, developed by three students of the engineering school IMAC (Paris, France). \n <br />
	    							Once your team is ready, you can challenge opposing teams in a game for which rapidity will be your main asset ! 
	    							The aim is to flash your opponents\' markers as many times as possible in order to inflict them damage. 
	    							Show them who the boss is ! \n\n <br /><br />
	    							
									Flash Me is totaly free ! Don\'t hesitate ! Visit our website at %3$s and download the application.
	    										
	    							Hoping to see you soon ! \n\n<br /><br />
	    							The Flash Me Team\n</string>
	    							
	<string name="resend_marker">Do you want your marker to be sent again to your current e-mail address : %1$s ?</string>
	<string name="mail_sent_to_friend">An e-mail has been sent to %1$s.</string>
	
	<!--  action bar -->
	<string name="action_edit_profile">Edit profile</string>
	<string name="action_send_marker">Send marker</string>
	<string name="action_invite_friend">Invite a friend</string>
	<string name="action_log_out">Log out</string>
	<string name="tab_profile">Profile</string>
	<string name="tab_teams">Teams</string>
	<string name="tab_games">Games</string>
	<string name="invite_friend">Enter your friend\'s e-mail address to invite him to join FlashMe and play with you !</string>
	
	<!-- profile -->
	<string name="my_profile">My profile</string>
	<string name="profile">Profile</string>
    <string name="profile_bt">profile</string>
    <string name="team_bt">teams</string>
    <string name="game_bt">games</string>
    <string name="profile_picture">profile_picture</string>
    <string name="profile_marker">profile_marker</string>
    <string name="score_ic">score</string>
    <string name="vics_ic">vics</string>
    <string name="deaths_ic">deaths</string>
    <string name="rank_ic">rank</string>
    <string name="best_score_txt">Best score</string>
    <string name="best_score_value">0</string>
    <string name="rank_txt">Rank</string>
    <string name="rank_value">0</string>
    <string name="total_score_txt">Total score</string>
    <string name="total_score_value">0</string>
    <string name="victories_txt">Victories</string>
    <string name="victories_value">0</string>
    <string name="defeats_txt">Defeats</string>
    <string name="defeats_value">0</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_pic">CHANGE PICTURE</string>
    <string name="take_new_pic">TAKE NEW PICTURE</string>
    <string name="new_mail">New email</string>
    <string name="new_pass">New password</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="changes_saved">Your changes have been successfully saved !</string>
    <string name="delete_profile">DELETE ACCOUNT</string>
    
	<!-- my teams -->
	<string name="my_teams">My teams</string>
	<string name="team_players"></string>
	<string name="enter_team">New team name</string>
	<string name="enter_player_auto">Player name</string>
	<string name="empty_team_name">You must enter a valid team name.</string>
	<string name="empty_player_name">You must enter a valid player name.</string>
	<string name="create">Create</string>
	<string name="add">Add</string>
	<string name="player_in_team_pic">player_picture</string>
	<string name="delete_player_bt">Delete player</string>
	<string name="delete">delete</string>
	<string name="delete_team_confirm"><Data><![CDATA[Are you sure you want to delete the team <b>%1$s</b> ?]]> </Data></string>
	<string name="delete_player_from_team_confirm"><Data><![CDATA[Are you sure you want to delete <b>%1$s</b> from the team <b>%2$s</b> ?]]> </Data></string>
	<string name="delete_team_from_game_confirm"><Data><![CDATA[Are you sure you want to delete the team <b>%1$s</b> from the game <b>%2$s</b> ?]]> </Data></string>
	<string name="quit_team_alert">Beware! If you decide to quit the team, you won\'t be able to re-join it unless the creator invites you.</string>
	<string name="quit_team">Quit team</string>
	<string name="cancel">Cancel</string>
	<string name="no_contextual_menu">no_contextual_menu</string>
	<string name="play">PLAY</string>
	
	<!-- my games -->
	<string name="my_games">My games</string>
	<string name="game_teams">Game teams</string>
	<string name="enter_game">New game name</string>
	<string name="enter_team_auto">Team name</string>
	<string name="empty_game_name">You must enter a valid game name.</string>
	<string name="delete_game_confirm"><Data><![CDATA[Are you sure you want to delete the game <b>%1$s</b> ?]]> </Data></string>
	<string name="team_pic">team_picture</string>
	<string name="delete_team_bt">Delete team</string>
	<string name="quit_game">Quit game</string>
	<string name="elem_in_list_picture">Elem in list picture</string>
	<string name="name_too_short">Ooops ! You must choose a name larger than 3 characters.</string>
	<string name="how_long">How long do you want this game to last ?</string>
	
	<!-- details list -->
	<string name="add_bt">Add element</string>
	<string name="next_bt">See details</string>
	<string name="delete_bt">Delete element</string>
	<string name="elem_state">Elem state</string>	
	
	<!-- The game -->
	<string name="background">Background image target</string>
	<string name="ic_life">Life points</string>
	<string name="ic_munitions">Munitions</string>
	<string name="ic_time">Remaining time</string>
	<string name="life">Life points value</string>
	<string name="munitions">Munitions value</string>
	<string name="time">Remaining time value</string>
	<string name="life_value">0</string>
	<string name="munitions_value">0</string>
	<string name="time_value">00:00</string>
	<string name="gauge">Gauge</string>
	
	<!--  Score alert -->
	<string name="score_title">Score table</string>
	<string name="score_yours">Your score : </string>
	<string name="score_team1">Score Team1</string>
	<string name="score_team2">Score Team2</string>
	<string name="score_team3">Score Team3</string>
	
	
</resources>