<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
        
    <LinearLayout 
        android:id="@+id/activity_header"
	    style="@style/header" >

        <ImageButton
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:contentDescription="@string/back_bt"
            android:focusable="false"
            android:src="@drawable/back_bt" />

        <TextView
            android:id="@+id/top_line_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14.5sp"
            android:layout_marginRight="29sp"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/large_tx" />
	    
	</LinearLayout>
    
 	<ImageView 
        android:id="@+id/profile_picture"
        android:layout_below="@id/activity_header"
        android:scaleType="centerCrop"
		android:layout_height="@dimen/button_wd" 
		android:layout_width="@dimen/button_wd" 
		android:layout_margin="@dimen/medium_mg"
		android:contentDescription="@string/profile_picture"
		android:layout_centerHorizontal="true" />
 	
 	<Button
        android:id="@+id/change_pic"
        android:layout_below="@id/profile_picture" 
        android:layout_width="@dimen/button_wd"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_pic"
        android:background="@drawable/light_button"
        style="@style/buttonLightBlue" />
 	
 	<TextView
        android:id="@+id/or"
        android:layout_below="@id/change_pic" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_mg"
        android:layout_centerHorizontal="true"
        android:text="@string/or" 
        android:textColor="@color/light_blue" />
        
   <Button
        android:id="@+id/take_new_pic"
        android:layout_below="@id/or" 
        android:layout_width="@dimen/button_wd"
        android:layout_marginTop="@dimen/small_mg"
        android:layout_centerHorizontal="true"
        android:text="@string/take_pic"
        android:background="@drawable/light_button"
        style="@style/buttonLightBlue" />
	 	
   	<EditText
	    android:id="@+id/new_mail"
	    android:layout_below="@+id/take_new_pic"
	    android:layout_marginTop="@dimen/medium_mg"
	    android:hint="@string/new_mail"
 	    android:inputType="text"
 	    style="@style/gray_edit_text" />
	   	
	<EditText
	    android:id="@+id/new_pass"
	    android:layout_below="@+id/new_mail"
	    android:layout_marginTop="@dimen/small_mg"
	    android:hint="@string/new_pass"
	    android:inputType="text"
	    style="@style/gray_edit_text" />
    	
	<Button
        android:id="@+id/save_changes"
        android:layout_below="@+id/new_pass" 
        android:layout_width="@dimen/button_wd"
        android:layout_marginTop="@dimen/medium_mg"
        android:text="@string/save_changes"
        android:background="@drawable/dark_button"
        style="@style/buttonDarkBlue" />
		 
</RelativeLayout>
